--- a/index.css
+++ b/index.css
@@ -142,7 +142,7 @@ body {
 .hero-section {
     position: relative;
     height: 100vh;
-    background-image: url('bg.jpg');
+    background-image: url('Assets/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
